# crewai-serper-agent

./: .gitignore  README.md  README_crewai.md  main.py  pyproject.toml  report.md
src/crewai_serper_agent/: crew.py  main.py
src/crewai_serper_agent/config/: tasks.yaml
src/crewai_serper_agent/config/guardrails/: config.yml  rails.co
