[project]
name = "crewai_serper_agent"
version = "0.1.0"
description = "crewai-serper-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "ruff>=0.11.3",
    "crewai[tools]>=0.108.0,<1.0.0",
    "nemoguardrails[llm]>=0.11.0",
    "langchain-openai>=0.2.14",
]

[project.scripts]
crewai_serper_agent = "crewai_serper_agent.main:run"
run_crew = "crewai_serper_agent.main:run"
train = "crewai_serper_agent.main:train"
replay = "crewai_serper_agent.main:replay"
test = "crewai_serper_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
